# shared_sources

./: .gitignore  AABB.cpp  AABB.h  ASELoader.cpp  ASELoader.h  AddVertex.cpp  AddVertex.h  AlignFacet.cpp  AlignFacet.h  AppSettings.cpp  AppSettings.h  AppUpdater.cpp  AppUpdater.h  BoundingBox.cpp  BoundingBox.h  Buffer_shared.cpp  Buffer_shared.h  BuildIntersection.cpp  BuildIntersection.h  CMakeLists.txt  CollapseSettings.cpp  CollapseSettings.h  CreateShape.cpp  CreateShape.h  Distributions.cpp  Distributions.h  DrawingArea.cpp  DrawingArea.h  ExtrudeFacet.cpp  ExtrudeFacet.h  FacetCoordinates.cpp  FacetCoordinates.h  FacetData.cpp  FacetData.h  Facet_shared.cpp  Facet_shared.h  File.cpp  File.h  FlowCLI.cpp  FlowMPI.cpp  (+123 more)
Cimage/: CImage.cpp
Cimage/png/png/: pngread.c  pngrutil.c  pngset.c  pngwrite.c  pngwutil.c
Cimage/png/zlib/: trees.c
Clipper/: CMakeLists.txt
GLApp/: GLApp.cpp  GLApp.h  GLButton.cpp  GLButton.h  GLColorBox.cpp  GLColorBox.h  GLCombo.cpp  GLCombo.h  GLComponent.cpp  GLComponent.h  GLContainer.cpp  GLContainer.h  GLFileBox.cpp  GLFileBox.h  GLFont.cpp  GLFont.h  GLFontTTF.cpp  GLFontTTF.h  GLFormula.cpp  GLFormula.h  GLGradient.cpp  GLGradient.h  GLIcon.cpp  GLIcon.h  GLInputBox.cpp  GLInputBox.h  GLLabel.cpp  GLLabel.h  GLList.cpp  GLList.h  GLMatrix.cpp  GLMatrix.h  GLMenu.cpp  GLMenu.h  GLMenuBar.cpp  GLMenuBar.h  GLMessageBox.cpp  GLMessageBox.h  GLParser.cpp  GLParser.h  (+34 more)
GLApp/GLChart/: AxisPanel.cpp  AxisPanel.h  DataList.h  GLAxis.cpp  GLAxis.h  GLChart.cpp  GLChart.h  GLChartConst.h  GLChartOptions.cpp  GLChartOptions.h  GLDataView.cpp  GLDataView.h  GLDataViewOptions.cpp  GLDataViewOptions.h  SearchInfo.h
Helper/: Chronometer.cpp  Chronometer.h  CircularBuffer.cpp  CircularBuffer.h  ConsoleLogger.h  FormatHelper.cpp  FormatHelper.h  GLProgress_CLI.cpp  GLProgress_CLI.hpp  GLProgress_ImGui.cpp  GLProgress_ImGui.h  GLProgress_abstract.cpp  GLProgress_abstract.hpp  GraphicsHelper.cpp  GraphicsHelper.h  MathTools.cpp  MathTools.h  OutputHelper.cpp  OutputHelper.h  StringHelper.cpp  StringHelper.h  VectorHelper.h
Interface/: AddVertex.cpp  AddVertex.h  AlignFacet.cpp  AlignFacet.h  AppUpdater.cpp  AppUpdater.h  AppUpdaterRemoteFeed.hpp  BuildIntersection.cpp  BuildIntersection.h  CollapseSettings.cpp  CollapseSettings.h  ConvergencePlotter.cpp  ConvergencePlotter.h  CreateShape.cpp  CreateShape.h  CrossSection.cpp  CrossSection.h  DrawingArea.cpp  ExtrudeFacet.cpp  ExtrudeFacet.h  FacetCoordinates.cpp  FacetCoordinates.h  FormulaEditor.cpp  FormulaEditor.h  GeometryRender_shared.cpp  GeometryTypes.h  GeometryViewer.h  GeometryViewer_shared.cpp  GlobalSettings_shared.cpp  GlobalSettings_shared.h  HistogramPlotter.cpp  HistogramPlotter.h  HistogramSettings.cpp  HistogramSettings.h  ImGuiConvergencePlotter.cpp  ImguiAABB.cpp  ImguiAABB.h  ImguiAdvFacetParams.cpp  ImguiAdvFacetParams.h  ImguiBuildIntersection.cpp  (+119 more)
Interface/imgui_stdlib/: imgui_stdlib.cpp  imgui_stdlib.h
NativeFileDialog/: CMakeLists.txt  nfd_win.cpp
NativeFileDialog/molflow_wrapper/: nfd_wrapper.cpp
PugiXML/: CMakeLists.txt
RayTracing/: BVH.cpp  BVH.h  KDTree.cpp  KDTree.h  Primitive.h  RTHelper.h  Ray.cpp  Ray.h
SDL_SavePNG/: CMakeLists.txt
TruncatedGaussian/: CMakeLists.txt  rtnorm.cpp  rtnorm.hpp
ZipUtils/: unzip.cpp  zip.cpp
cmake_modules/: SetOpenMP.cmake
cmake_modules/src_shared_core/: CMakeLists.txt
cmake_modules/src_shared_gui/: CMakeLists.txt
compress/: CMakeLists.txt  compress.cpp
fmt/: CMakeLists.txt
imgui/: CMakeLists.txt  IconsFontAwesome5.h  imconfig.h  imgui.cpp  imgui_internal.h
imgui_test_engine/: imgui_te_context.h  imgui_te_engine.h  imgui_te_ui.cpp  imgui_te_ui.h
implot/: CMakeLists.txt  implot.cpp  implot.h  implot_internal.h
wbenny-ziplib-176e4b6d51fc/: Makefile
ziplib/: CMakeLists.txt
ziplib/Source/ZipLib/extlibs/lzma/: CMakeLists.txt
ziplib/Source/ZipLib/extlibs/zlib/: CMakeLists.txt
ziplib/test/: Main.cpp
